import org.apache.tools.ant.taskdefs.condition.Os
import org.gradle.api.file.ArchiveOperations
import org.gradle.api.file.FileSystemOperations
import javax.inject.Inject

plugins {
    id('java')
    id('application')
    id('org.beryx.jlink') version "$beryxPluginVersion"
    id('com.gradleup.shadow') version "$shadowPluginVersion"
    id('org.gradlex.extra-java-module-info') version "$extraModuleInfoPluginVersion"
}

version = rootProject.version
group = 'net.brlns'

def author = 'Gabriel D @hstr0100'
def lowercaseName = 'gdownloader'

def os = [
    isWindows: { -> Os.isFamily(Os.FAMILY_WINDOWS) },
    isLinux:   { -> Os.isFamily(Os.FAMILY_UNIX) && !Os.isFamily(Os.FAMILY_MAC) },
    isMacOsX:  { -> Os.isFamily(Os.FAMILY_MAC) }
]

def getArchitecture(def os) {
    def arch = System.getProperty("os.arch").toLowerCase()
    if (arch.contains("aarch64") || arch.contains("arm64")) {
        return "arm64"
    } else if (arch.contains("arm")) {
        return os.isLinux() ? "armhf" : "arm"
    } else if (arch.contains("64")) {
        return os.isLinux() ? "amd64" : "x64"
    } else {
        return os.isLinux() ? "i386" : "x86"
    }
}

def architecture = getArchitecture(os)

interface FileOps {
    @Inject FileSystemOperations getFs()
    @Inject ArchiveOperations getArchives()
}
def fileOps = project.objects.newInstance(FileOps)

def commonJvmArgs = [
    '--add-exports=java.management/sun.management=ALL-UNNAMED',
    '--enable-native-access=com.github.kwhat.jnativehook,net.brlns.gdownloader,com.sun.jna'
]

def buildOutputDir = layout.buildDirectory.get().asFile

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25

    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }

    // There seems to be no consensus whatsoever on whether to use .set() or =.
    // Personally, I prefer = for consistency, and .set() for a cleaner-looking syntax.
    // Perhaps we can settle on a mix of both approaches.

    modularity.inferModulePath.set(true)
}

application {
    mainClass.set('net.brlns.gdownloader.GDownloader')
    mainModule.set('net.brlns.gdownloader')
    applicationDefaultJvmArgs = commonJvmArgs
}

dependencies {
    // Used only to provide WebP thumbnail support.
    // TODO: Investigate whether a better JPMS-aware alternative is available.
    implementation(project(path: ':twelvemonkeys', configuration: 'moduleJar'))

    implementation("ch.qos.logback:logback-classic:$logbackVersion")
    implementation("com.github.kwhat:jnativehook:$jnativehookVersion")
    implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
    implementation("org.jsoup:jsoup:$jsoupVersion")
    implementation("org.slf4j:slf4j-api:$slf4jVersion")
    implementation("net.java.dev.jna:jna:$jnaVersion")
    implementation("net.java.dev.jna:jna-platform:$jnaVersion")
    implementation("jakarta.annotation:jakarta.annotation-api:$jakartaAnnotationVersion")
    implementation("jakarta.persistence:jakarta.persistence-api:$jakartaPersistenceVersion")
    // upgrading eclipselink to v5.0.0 is a no-go with java 25
    implementation("org.eclipse.persistence:eclipselink:$eclipselinkVersion")
    implementation("org.hsqldb:hsqldb:$hsqldbVersion")
    implementation("com.adonax:audiocue:$adonaxVersion")
    implementation("com.github.hypfvieh:dbus-java-core:$dbusVersion")
    implementation("com.github.hypfvieh:dbus-java-transport-native-unixsocket:$dbusVersion")

    compileOnly("org.projectlombok:lombok:$lombokVersion")
    annotationProcessor("org.projectlombok:lombok:$lombokVersion")
    testImplementation("org.junit.jupiter:junit-jupiter:$jupiterVersion")
    testRuntimeOnly('org.junit.platform:junit-platform-launcher')
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('run') {
    enableAssertions = true
    jvmArgs = ['-Xss5M'] + commonJvmArgs
}

tasks.register('generateVersionFile') {
    group = 'build'

    def versionFile = file("src/main/resources/version.properties")
    def currentVersion = project.version.toString()

    inputs.property("version", currentVersion)
    outputs.file(versionFile)

    doLast {
        versionFile.parentFile.mkdirs()
        versionFile.text = "version=${currentVersion}"
    }
}

tasks.named('compileJava').configure {
    dependsOn tasks.named('generateVersionFile')
}

tasks.named('processResources').configure {
    dependsOn tasks.named('generateVersionFile')
}

extraJavaModuleInfo {
    failOnMissingModuleInfo.set(true)
    deriveAutomaticModuleNamesFromFileNames.set(true)

    module('com.adonax:audiocue', 'audiocue') {
        requires('java.desktop')
        exportAllPackages()
    }

    module("twelvemonkeys-${twelvemonkeysVersion}-all.jar", 'com.twelvemonkeys.imageio') {
        requiresStatic('java.desktop')
        exportAllPackages()
    }

    module('net.java.dev.jna:jna', 'com.sun.jna') {
        requires('java.logging')
        exportAllPackages()
    }

    module('net.java.dev.jna:jna-platform', 'com.sun.jna.platform') {
        requires('com.sun.jna')
        requires('java.desktop')
        exportAllPackages()
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll(['-Xlint:all,-serial,-processing,-requires-automatic,-missing-explicit-ctor'])
}

tasks.named('jar', Jar) {
    archiveBaseName.set("${lowercaseName}-java")

    manifest {
        attributes(
            'Implementation-Title': rootProject.name,
            'Implementation-Version': version,
            'Implementation-Vendor': author,
            'Main-Class': application.mainClass.get()
        )
    }

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.named('shadowJar', com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
    archiveBaseName.set("${lowercaseName}-java")
    mergeServiceFiles()
    configurations.set([project.configurations.runtimeClasspath])
}

tasks.register('zipJpackageImage', Zip) {
    dependsOn tasks.named('jpackage')

    def fileName = os.isWindows() ? "${lowercaseName}-${version}-windows_portable_${architecture}.zip" :
                   os.isLinux() ? "${lowercaseName}-${version}-linux_portable_${architecture}.zip" :
                   "${lowercaseName}-${version}-mac_portable_${architecture}.zip"

    archiveFileName.set(fileName)
    destinationDirectory.set(layout.buildDirectory.dir("jpackage"))

    // A less-than-stellar but functional way to detect that the program is running in portable mode.
    doFirst {
        def basePath = os.isWindows() ? "${buildOutputDir}/jpackage/${rootProject.name}" :
                       os.isLinux() ? "${buildOutputDir}/jpackage/${rootProject.name}/lib" :
                       "${buildOutputDir}/jpackage/${rootProject.name}.app/Contents"

        def portableLockFile = file("$basePath/runtime/portable.lock")
        portableLockFile.text = [
            "This file ensures that the program will run in portable mode.",
            "Deleting it when the program is not installed is not recommended."
        ].join("\n")
    }

    from("${buildOutputDir}/jpackage/${rootProject.name}") {
        if (os.isLinux() || os.isMacOsX()) {
            filePermissions {
                unix(0755)
            }
            dirPermissions {
                unix(0755)
            }
        }
    }
}

tasks.named('jpackage').configure {
    finalizedBy tasks.named('zipJpackageImage')

    doFirst {
        def basePath = os.isWindows() ? rootProject.name :
                       os.isLinux() ? "${rootProject.name}/lib" :
                       "${rootProject.name}.app/Contents"

        fileOps.fs.copy {
            from('src/main/resources/assets/launcher')
            include('GDownloader.png')
            include('GDownloader.icns')
            include('GDownloader.ico')
            include('GDownloader.desktop')
            into("${buildOutputDir}/jpackage/$basePath/app")
        }
    }
}

jlink {
    options.set(['--strip-debug', '--compress', 'zip-6', '--no-header-files', '--no-man-pages'])

    launcher {
        name = 'GDownloader'
        jvmArgs = ['-Xmx2G', '-Xss5M'] + commonJvmArgs
        noConsole = true
    }

    jpackage {
        jvmArgs = ['-Djnativehook.lib.locator=net.brlns.gdownloader.util.CustomNativeLocator'] + commonJvmArgs

        def imgType = os.isWindows() ? 'ico' : os.isMacOsX() ? 'icns' : 'png'
        icon = "src/main/resources/assets/launcher/GDownloader.$imgType"

        installerOptions.addAll([
            '--about-url', 'https://github.com/hstr0100/GDownloader',
            '--description', 'Graphical interface for yt-dlp, gallery-dl, and spotDL',
            '--vendor', author,
            '--copyright', "2026 ${author}",
            '--license-file', "../LICENSE",
            '--app-version', project.version.toString()
        ])

        if (os.isWindows()) {
            installerName = "${rootProject.name}"
            installerType = 'msi'
            //imageOptions.addAll(['--win-console'])
            installerOptions.addAll([
                '--win-per-user-install',
                '--win-dir-chooser',
                '--win-menu',
                '--win-menu-group', "${rootProject.name}",
                '--win-shortcut'
            ])
        } else if (os.isLinux()) {
            // AppImage not yet supported by jpackage
            installerType = 'deb'
            installerOptions.addAll([
                '--resource-dir', "${buildOutputDir}/jpackage/${rootProject.name}/lib/app",
                '--linux-package-name', "${lowercaseName}-linux",
                '--linux-app-category', 'web',
                '--linux-menu-group', 'Network;',
                '--linux-deb-maintainer', 'brokenlensllc@gmail.com',
                '--linux-rpm-license-type', 'GPLv3',
                '--linux-shortcut'
            ])
        } else if (os.isMacOsX()) {
            installerName = "${lowercaseName}-mac-${architecture}"
            installerType = 'dmg'
            installerOptions.addAll([
                '--mac-package-name', "${rootProject.name}"
            ])
        }
    }
}

configurations {
    resolvableImplementation {
        extendsFrom(configurations.implementation)
        canBeResolved = true
        canBeConsumed = false
    }
}

tasks.named('jlink').configure {
    doLast {
        def baseLibPath = 'com/github/kwhat/jnativehook/lib'

        configurations.resolvableImplementation.files.findAll { f ->
            f.name.contains('jnativehook')
        }.each { nativeJar ->
            def imgDir = jlink.imageDir.get().asFile
            def destDir = file("$imgDir/bin/native-libs")
            destDir.deleteDir()
            destDir.mkdirs()

            fileOps.fs.copy {
                from(fileOps.archives.zipTree(nativeJar)) {
                    include("${baseLibPath}/**")
                    eachFile { fcd ->
                        def segments = fcd.relativePath.segments
                        def prefixDepth = baseLibPath.split('/').length
                        fcd.relativePath = new RelativePath(true, segments.drop(prefixDepth))
                    }

                    includeEmptyDirs = false
                }

                into destDir
            }
        }
    }
}

tasks.register('createAppImage', Exec) {
    dependsOn tasks.named('zipJpackageImage')
    group = 'distribution'
    onlyIf { os.isLinux() }

    def appImageArch
    def nativeLibsArch
    if (architecture == "arm64" || architecture == "aarch64") {
        appImageArch = "aarch64"
        nativeLibsArch = "arm64"
    } else if (architecture == "arm" || architecture == "armhf") {
        appImageArch = "armhf"
        nativeLibsArch = "arm"
    } else if (architecture == "x64" || architecture == "amd64") {
        appImageArch = "x86_64"
        nativeLibsArch = "x86_64"
    } else {
        appImageArch = "i686"
        nativeLibsArch = "x86"
    }

    def appGroup = 'net.brlns'
    def appDirBase = file("${buildOutputDir}/appimage")

    doFirst {
        def appDir = file("$appDirBase/AppDir")
        def appUsrPath = "$appDir/usr"
        def appLibPath = "$appUsrPath/lib"

        appDirBase.deleteDir()
        appDir.mkdirs()

        fileOps.fs.copy {
            from file("${buildOutputDir}/jpackage/${rootProject.name}")
            into appUsrPath
        }

        // TODO: different update endpoint for AppImage
        file("$appLibPath/runtime/portable.lock")
            .renameTo(file("$appLibPath/runtime/appimage.lock"))

        file("$appUsrPath/share/metainfo").mkdirs()
        file("$appUsrPath/share/applications").mkdirs()
        file("$appUsrPath/share/icons/hicolor/512x512/apps").mkdirs()

        def today = new java.text.SimpleDateFormat("yyyy-MM-dd").format(new Date())

        [
            "${appGroup}.${lowercaseName}.metainfo.xml",
            "${appGroup}.${lowercaseName}.appdata.xml",
        ].each { destFileName ->
            fileOps.fs.copy {
                from file("src/main/resources/${lowercaseName}.appdata.xml")
                into "$appUsrPath/share/metainfo"
                rename { destFileName }

                filter { line ->
                    line.replace("{version}", rootProject.version)
                        .replace("{timestamp}", today)
                }
            }
        }

        // Include libxkbcommon-x11 in AppImage if available
        // TODO libxcb-xkb.so.1 -> libxcb-xkb1 + deps
        def libDirs = [
            "/usr/lib/x86_64-linux-gnu",
            "/usr/lib/i386-linux-gnu",
            "/usr/lib/aarch64-linux-gnu",
            "/usr/lib/arm-linux-gnueabihf",
            "/usr/lib"
        ]

        def foundXkbCommon = false

        libDirs.each { libDirPath ->
            if (!foundXkbCommon) {
                def libDir = file(libDirPath)
                def libFile = file("${libDir}/libxkbcommon-x11.so.0")

                if (libFile.exists()) {
                    fileOps.fs.copy {
                        from libFile
                        into "$appLibPath/runtime/bin/native-libs/linux/${nativeLibsArch}"
                    }

                    foundXkbCommon = true
                    logger.lifecycle("Found libxkbcommon-x11.so.0 in ${libDir}")
                }
            }
        }

        if (!foundXkbCommon) {
            logger.warn("Could not find libxkbcommon-x11.so.0 in any of: ${libDirs}")
        }

        def launcherScript = file("$appLibPath/${rootProject.name}")
        launcherScript.setExecutable(true, false)

        def iconPath = "$appLibPath/app/GDownloader.png"

        [
            "$appDir/${appGroup}.${lowercaseName}.png",
            "$appUsrPath/share/icons/hicolor/512x512/apps/${appGroup}.${lowercaseName}.png",
            "$appDir/.DirIcon"
        ].each { destPath ->
            fileOps.fs.copy {
                from iconPath
                into file(destPath).parent
                rename { file(destPath).name }
            }
        }

        [
            "$appUsrPath/share/applications/${appGroup}.${lowercaseName}.desktop",
            "$appDir/${appGroup}.${lowercaseName}.desktop",
        ].each { destPathString ->
            def destFile = file(destPathString)
            def parentDir = destFile.parentFile

            parentDir.mkdirs()

            fileOps.fs.copy {
                from file("src/main/resources/assets/launcher/${rootProject.name}.desktop")
                into parentDir

                rename { destFile.name }

                filter { line ->
                    line.replace("APPLICATION_LAUNCHER", rootProject.name)
                        .replace("APPLICATION_ICON", "${appGroup}.${lowercaseName}")
                }
            }

            if (destFile.exists()) {
                 destFile.setExecutable(true, false)
            }
        }

        def appRun = file("$appDir/AppRun")
        appRun.text = [
            "#!/bin/bash",
            "HERE=\"\$(dirname \"\$(readlink -f \"\${0}\")\")\"",
            "NATIVES=\"\${HERE}/usr/lib/runtime/bin/native-libs/linux/${nativeLibsArch}\"",
            "export PATH=\"\${HERE}/usr/bin:\${PATH}\"",
            "export LD_LIBRARY_PATH=\"\${HERE}/usr/lib:\${NATIVES}" + '${LD_LIBRARY_PATH:+:\${LD_LIBRARY_PATH}}\"',
            "exec \"\${HERE}/usr/bin/${rootProject.name}\" \"\$@\""
        ].join("\n")
        appRun.setExecutable(true, false)
    }

    // Build image
    // We were using a lowercase name due to convention; .deb files require lowercase names, and it would look out of place and trigger OCD.
    def appImageName = "${rootProject.name}-${version}-${appImageArch}.AppImage"
    def updateInfo = "gh-releases-zsync|hstr0100|${rootProject.name}|latest|${rootProject.name}-*${appImageArch}.AppImage.zsync"

    workingDir "${buildOutputDir}/appimage"
    environment "ARCH", appImageArch

    def gpgKeyId = System.getenv('GPG_KEY_ID')
    // this requires appimagetool (without extension and version number) to be in your PATH
    // https://github.com/AppImage/appimagetool/releases
    def commandLineArgs = ["appimagetool", "--verbose", "-n", "AppDir", appImageName,
        "--updateinformation", updateInfo]

    if (gpgKeyId) {
        commandLineArgs.addAll(["--sign", gpgKeyId])
    }

    commandLine(commandLineArgs)

    doLast {
        [
            file("${buildOutputDir}/appimage/${appImageName}"),
            file("${buildOutputDir}/appimage/${appImageName}.zsync")
        ].each { sourcePath ->
            fileOps.fs.copy {
                from sourcePath
                into "${buildOutputDir}/jpackage"
            }
        }

        //delete appDirBase
        println "Created AppImage at: ${buildOutputDir}/jpackage/${appImageName}"
    }
}

tasks.register('printJpackageContents') {
    doLast {
        def jpackageDir = file("${buildOutputDir}/jpackage")
        if (jpackageDir.exists() && jpackageDir.isDirectory()) {
            println "Build complete, generated binaries:"

            jpackageDir.eachFile { file ->
                if (file.isFile()) {
                    println "- ${file.absolutePath}"
                }
            }
        } else {
            println "jpackage directory is missing or not a directory: ${jpackageDir.path}"
        }
    }
}

tasks.register('renameWindowsInstaller', Copy) {
    group = 'distribution'
    onlyIf { os.isWindows() }

    dependsOn tasks.named('jpackage')

    def jpackageDir = layout.buildDirectory.dir('jpackage')

    from(jpackageDir) {
        include "${rootProject.name}-${version}.msi"
        rename { "${lowercaseName}-${version}-windows_${architecture}.msi" }
    }
    into jpackageDir

    doLast {
        delete file("${jpackageDir.get().asFile}/${rootProject.name}-${version}.msi")
    }
}

tasks.named('zipJpackageImage').configure {
    finalizedBy tasks.named('printJpackageContents')
    finalizedBy tasks.named('renameWindowsInstaller')
}

tasks.named('createAppImage').configure {
    finalizedBy tasks.named('printJpackageContents')
}